# elachere_ChallengeBackend

./: Dockerfile  README.md  app.env  celerybeat-schedule  db.sqlite3  docker-compose.yml  manage.py  postgres.env  pyproject.toml  requirements.txt
groover_challenge/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
groover_challenge/http/: exceptions.py  utils.py
spotiauth/: auth.py  models.py  urls.py  views.py
spotiauth/templates/: error.html  success.html
spotifetcher/: client.py  exceptions.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
